--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h2>Produtos em Destaque</h2>
         <div class="produto-lista">
             <div class="produto-item">
-                <img src="https://via.placeholder.com/300x400" alt="Produto 1">
+                <img src="img/camiseta casual.jpeg" alt="Produto 1">
                 <h3>Camiseta Casual</h3>
                 <p>R$ 79,99</p>
                 <button class="btn-comprar">Comprar</button>
             </div>
             <div class="produto-item">
-                <img src="https://via.placeholder.com/300x400" alt="Produto 2">
+                <img src="img/calça jeans.webp" alt="Produto 2">
                 <h3>Calça Jeans</h3>
                 <p>R$ 139,99</p>
                 <button class="btn-comprar">Comprar</button>
             </div>
             <div class="produto-item">
-                <img src="https://via.placeholder.com/300x400" alt="Produto 3">
+                <img src="img/blusa de frio.jpg" alt="Produto 3">
                 <h3>Blusa de Frio</h3>
                 <p>R$ 99,99</p>
                 <button class="btn-comprar">Comprar</button>
